# hot_invitation

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
hot_invitation/: main.py
hot_invitation/templates/: 2020.html  base.html  footer.html  header.html  index.html
